cards scrollbar fixed

--- a/Frontend/styles/base.css
+++ b/Frontend/styles/base.css
@@ -933,6 +933,19 @@ option {
     padding: 10px;
     overflow-y: scroll;
 }
+.cards::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(228, 225, 225);
+
+}
+
+.cards::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    border-left: 0.1px solid white;
+    background-color: #636363;
+    cursor: pointer;
+
+}
 
 .product-card {
     width: 300px;
@@ -1224,7 +1237,6 @@ option {
         left: 50%;
         transform: translate(-50%);
         margin-top: 40px;
-        margin-right: 40px;
     }
 
     .poster img {
